# perseus

./: .editorconfig  .env  .gitattributes  .gitignore  .project-words.txt  .versionrc.json  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  arch.html  bonnie.toml  building.html  cli.html  config-managers.html  config_managers.html  cspell.json  debugging.html  define-app.html  ejecting.html  error-pages.html  error_pages.html  exporting.html  hello-world.html  index.html  intro.html  print.html  routing.html  rust-toolchain  rust-toolchain.toml  searchindex.js  searchindex.json  second-app.html  serving.html  setup.html  stable.html  (+10 more)
examples/.base/: Cargo.toml  README.md
examples/.base/src/: error_pages.rs  main.rs
examples/.base/src/templates/: index.rs
examples/basic/: Cargo.toml  Cargo.toml.example  index.html
examples/basic/.perseus/: .gitignore  Cargo.toml  bonnie.toml  main.js
examples/basic/.perseus/builder/: Cargo.toml
examples/basic/.perseus/server/: Cargo.toml
examples/basic/.perseus/src/: app.rs  lib.rs
examples/basic/src/: error_pages.rs  lib.rs
examples/basic/src/templates/: about.rs  index.rs
examples/basic/tests/: main.rs
examples/cli/: Cargo.toml  index.html
examples/cli/.perseus/: Cargo.toml  bonnie.toml  main.js
examples/cli/.perseus/server/: Cargo.toml
examples/cli/.perseus/src/: lib.rs
examples/cli/src/: error_pages.rs  lib.rs
examples/cli/src/pages/: about.rs  index.rs
examples/comprehensive/tiny/: .gitignore  Cargo.toml  Cargo.toml.example  README.md  index.html
examples/comprehensive/tiny/src/: lib.rs  main.rs
examples/core/basic/: .gitignore  Cargo.toml  Cargo.toml.example  README.md  tree.txt  tree1.txt
examples/core/basic/.perseus/: .gitignore  Cargo.toml
examples/core/basic/.perseus.old/: Cargo.toml
examples/core/basic/src/: lib.rs  main.rs
examples/core/basic/tests/: main.rs
examples/core/cookies/: Cargo.toml  README.md
examples/core/cookies/src/: lib.rs
examples/core/custom_server/: Cargo.toml  README.md
examples/core/custom_server/src/: lib.rs  main.rs
examples/core/custom_server/tests/: main.rs
examples/core/custom_server_rocket/: Cargo.toml  README.md
examples/core/custom_server_rocket/src/: main.rs
examples/core/freezing_and_thawing/: Cargo.toml  README.md
examples/core/freezing_and_thawing/src/: global_state.rs  lib.rs  main.rs
examples/core/freezing_and_thawing/tests/: main.rs
examples/core/i18n/: .gitignore  Cargo.toml  README.md  index.html
examples/core/i18n/src/: lib.rs  main.rs
examples/core/i18n/tests/: main.rs
examples/core/i18n/translations/: en-US.json  es-ES.ftl  es-ES.json  fr-FR.ftl  fr-FR.json
examples/core/idb_freezing/: Cargo.toml  README.md
examples/core/idb_freezing/src/: global_state.rs  main.rs
examples/core/idb_freezing/tests/: main.rs
examples/core/index_view/: Cargo.toml  README.md
examples/core/index_view/src/: lib.rs  main.rs
examples/core/index_view/tests/: main.rs
examples/core/js_interop/: Cargo.toml  Cargo.toml.example  README.md
examples/core/js_interop/src/: changeMessage.js
examples/core/js_interop/tests/: main.rs
examples/core/plugins/: Cargo.toml  README.md
examples/core/plugins/src/: lib.rs  main.rs  plugin.rs
examples/core/plugins/tests/: main.rs
examples/core/router_state/: Cargo.toml  README.md
examples/core/router_state/src/: main.rs
examples/core/rx_state/: Cargo.toml  README.md
examples/core/rx_state/src/: lib.rs  main.rs
examples/core/rx_state/tests/: main.rs
examples/core/set_headers/: Cargo.toml  README.md
examples/core/set_headers/src/: lib.rs  main.rs
examples/core/set_headers/tests/: main.rs
examples/core/static_content/: Cargo.toml  README.md  index.html
examples/core/static_content/src/: lib.rs  main.rs
examples/core/static_content/static/: style.css
examples/core/static_content/tests/: main.rs
examples/demos/auth/: Cargo.toml  README.md
examples/demos/auth/src/: error_pages.rs  global_state.rs  main.rs
examples/demos/fetching/: Cargo.toml  README.md
examples/demos/tailwindcss-plugin-perseus/: .gitignore  Cargo.toml  README.md  package.json
examples/demos/tailwindcss-plugin-perseus/.cargo/: config.toml
examples/demos/tailwindcss-plugin-perseus/src/: error_views.rs  main.rs
examples/global_state/: Cargo.toml  README.md
examples/global_state/src/: global_state.rs
examples/i18n/: Cargo.toml  index.html
examples/i18n/src/: error_pages.rs  lib.rs
examples/i18n/src/templates/: about.rs  (+3 more)
examples/i18n/tests/: main.rs
examples/i18n/translations/: en-US.json
examples/showcase/: .gitignore  Cargo.toml  bonnie.toml  index.html
examples/showcase/app/: Cargo.toml  index.html  main.js
examples/showcase/server/: Cargo.toml
examples/showcase/server-actix-web/: Cargo.toml
examples/showcase/src/: error_pages.rs  lib.rs
examples/showcase/tests/: main.rs
website/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
website/blog/: hsr-vs-hmr.md
website/comparisons/: eleventy.json  gatsby.json  nextjs.json  perseus.json  seed.json  yew.json
website/pkg/.perseus/: bundle.js  bundle.wasm
website/pkg/docs/: config-managers.html
website/pkg/en-US/: comparisons.html  docs.html  index.html
website/plugins/en-US/: size_opt.json  tailwind.json
website/src/: error_pages.rs  error_views.rs  lib.rs  main.rs
website/src/components/: arrows.rs  comparisons.rs  container.rs  features_list.rs  footer.rs  header.rs  info_svg.rs  mod.rs  trusted_svg.rs
website/src/templates/: comparisons.rs  docs.rs  index.rs  mod.rs  plugins.rs
website/static/: markdown.css  style.css
website/static/styles/: docs_links_markdown.css  markdown.css  style.css
website/translations/: en-US.ftl  en-US.json
website/website/: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
website/website/comparisons/: gatsby.json  perseus.json
website/website/src/: error_pages.rs  lib.rs
website/website/static/: prism.css
website/website/translations/: en-US.ftl
(+3830 files in other folders)
