[workspace]
members = [
	"packages/perseus",
	"packages/perseus-actix-web",
	"packages/perseus-cli",
    "examples/showcase",
    "examples/cli",
    # We have the CLI subcrates as workspace members so we can actively develop on them
    # They also can't be a workspace until nested workspaces are supported
    "examples/cli/.perseus",
    "examples/cli/.perseus/server",
    "examples/basic",
    "examples/i18n"
]

# Needed until Sycamore #230 is released
[patch.crates-io]
sycamore = { git = "https://github.com/arctic-hen7/sycamore", branch = "router-clone-stable" }
sycamore-router = { git = "https://github.com/arctic-hen7/sycamore", branch = "router-clone-stable" }
