[workspace]
members = [
	"packages/*",
    "examples/core/*",
    "examples/demos/*",
    "examples/comprehensive/*",
    "website",
    # We have the CLI subcrates as workspace members so we can actively develop on them
    # They also can't be a workspace until nested workspaces are supported
    # "examples/core/basic/.perseus",
    # "examples/core/basic/.perseus/server",
    # "examples/core/basic/.perseus/builder"
]
resolver = "2"

# [patch.crates-io]
# sycamore = { git = "https://github.com/arctic-hen7/sycamore" }
# sycamore-router = { git = "https://github.com/arctic-hen7/sycamore" }
# sycamore-router-macro = { git = "https://github.com/arctic-hen7/sycamore" }
# sycamore-macro = { git = "https://github.com/arctic-hen7/sycamore" }
# sycamore-core = { git = "https://github.com/arctic-hen7/sycamore" }
# sycamore-reactive = { git = "https://github.com/arctic-hen7/sycamore" }
# sycamore-web = { git = "https://github.com/arctic-hen7/sycamore" }
