[workspace]
members = [
	"packages/*",
    "examples/core/*",
    "examples/demos/*",
    "examples/comprehensive/*",
    "website",
    # We have the CLI subcrates as workspace members so we can actively develop on them
    # They also can't be a workspace until nested workspaces are supported
    # "examples/core/basic/.perseus",
    # "examples/core/basic/.perseus/server",
    # "examples/core/basic/.perseus/builder"
]
resolver = "2"

# [profile.release]
# lto = true
# opt-level = "s"
# codegen-units = 1
