[package]
name = "perseus-website"
version = "0.1.0"
edition = "2021"
description = "The official website for the Perseus framework."
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
license = "MIT"
repository = "https://github.com/arctic-hen7/perseus"
homepage = "https://arctic-hen7.github.io/perseus"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "=0.4.0-beta.7", features = [ "translator-lightweight" ] }
sycamore = "=0.8.0-beta.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fluent-bundle = "0.15"
lazy_static = "1"
# To avoid insane target-gating on event handlers, we put this everywhere for convenience
web-sys = { version = "0.3", features = [ "Event", "EventTarget", "Element", "Window", "Document", "DomRect", "HtmlCollection", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry" ] }
wasm-bindgen = "0.2.82"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
walkdir = "2"
pulldown-cmark = "0.8"
regex = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"
