[package]
name = "perseus-website"
version = "0.1.0"
edition = "2021"
description = "The official website for the Perseus framework."
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
license = "MIT"
repository = "https://github.com/framesurge/perseus"
homepage = "https://framesurge.sh/perseus"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "=0.4.0-beta.12", features = [ "translator-lightweight" ] }
sycamore = "0.8"
sycamore-macro = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
lazy_static = "1"
# To avoid insane target-gating on event handlers, we put this everywhere for convenience
web-sys = { version = "0.3", features = [ "Event", "EventTarget", "Element", "Window", "Document", "DomRect", "HtmlCollection", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry", "KeyboardEvent" ] }
wasm-bindgen = "0.2.82"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
walkdir = "2"
pulldown-cmark = "0.8"
regex = "1"
anyhow = "1"
thiserror = "1" # Needed to make Anyhow compatible with Perseus

[target.'cfg(client)'.dependencies]
wee_alloc = "0.4"
js-sys = "0.3"
gloo-timers = "0.2"
