[package]
name = "perseus-example-cli"
version = "0.1.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../packages/perseus" }
sycamore = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
