# This package is a testing playground for the CLI subcrates, which are stored here under `.perseus/`.
# Use the `basic` example for learning

[package]
name = "perseus-example-cli"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../packages/perseus" }
sycamore = { version = "0.5", features = ["ssr"] }
sycamore-router = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1" # Possibly don't need?

# This section is needed for WASM Pack (which we use instead of Trunk for flexibility)
[lib]
crate-type = ["cdylib", "rlib"]
