[package]
name = "perseus-website"
version = "0.3.0-beta.8"
edition = "2018"
description = "The official website for the Perseus framework."
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
license = "MIT"
repository = "https://github.com/arctic-hen7/perseus"
homepage = "https://arctic-hen7.github.io/perseus"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We use the current version of Perseus, not the local one
perseus = { path = "../../packages/perseus", version = "0.3.0-beta.8" }
sycamore = "0.6.1"
sycamore-router = "0.6.1"
serde = "1"
serde_json = "1"
fluent-bundle = "0.15"
walkdir = "2"
pulldown-cmark = "0.8"
lazy_static = "1"
web-sys = { version = "0.3", features = [ "Event", "EventTarget" ] }
wasm-bindgen = "0.2"
wee_alloc = "0.4"
