# This crate defines the user's app in terms that Wasm can understand, making development significantly simpler.
# IMPORTANT: spacing matters in this file for runtime replacements, do NOT change it!

[package]
name = "perseus-cli-builder"
version = "0.3.0-beta.4"
edition = "2018"
default-run = "perseus-builder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We alias here because the package name will change based on whatever's in the user's manifest
app = { package = "perseus-example-basic", path = "../" }

perseus = { path = "../../../packages/perseus" }
sycamore = { version = "0.6", features = ["ssr"] }
sycamore-router = "0.6"
web-sys = { version = "0.3", features = ["Event", "Headers", "Request", "RequestInit", "RequestMode", "Response", "ReadableStream", "Window"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1" # Possibly don't need?
console_error_panic_hook = "0.1.6"
urlencoding = "2.1"
futures = "0.3"
fs_extra = "1"

# This section is needed for Wasm Pack (which we use instead of Trunk for flexibility)
[lib]
crate-type = ["cdylib", "rlib"]

# We define a binary for building, serving, and doing both
[[bin]]
name = "perseus-builder"
path = "src/bin/build.rs"

[[bin]]
name = "perseus-exporter"
path = "src/bin/export.rs"
