[package]
name = "perseus-example-basic"
version = "0.4.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# perseus = { path = "../../../packages/perseus", features = [ "hydrate", "builder", "dflt-engine" ] }
sycamore = "=0.8.0-beta.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# fantoccini = "0.17"

# New Perseus metadata begins here
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-warp = { path = "../../../packages/perseus-warp", features = [ "dflt-server" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = [ "cdylib", "rlib" ]

[[bin]]
name = "perseus-example-basic"
path = "src/main.rs"
