[package]
name = "perseus-example-custom-server"
version = "0.4.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(engine)'.dev-dependencies]
fantoccini = "0.19"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-warp = { path = "../../../packages/perseus-warp", features = [ "dflt-server" ] }
warp = { package = "warp-fix-171", version = "0.3" } # Temporary until Warp #171 is resolved

[target.'cfg(client)'.dependencies]
