[package]
name = "custom_server_rocket"
version = "0.4.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus", features = ["hydrate"] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(engine)'.dev-dependencies]
fantoccini = "0.17"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
perseus-rocket = { path = "../../../packages/perseus-rocket", features = [ "dflt-server" ] }
rocket = "0.5.0-rc.2"

[target.'cfg(client)'.dependencies]
