[package]
name = "perseus-example-i18n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Note: this example can be used with `translator-fluent` or `translator-lightweight`
perseus = { path = "../../../packages/perseus", features = [ "translator-fluent", "hydrate" ] }
sycamore = "=0.8.0-beta.7"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
fluent-bundle = "0.15"
urlencoding = "2.1"

[dev-dependencies]
fantoccini = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-integration = { path = "../../../packages/perseus-integration", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = [ "cdylib", "rlib" ]

[[bin]]
name = "perseus-example-i18n"
path = "src/lib.rs"
