[package]
name = "perseus-example-i18n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Note: this example can be used with `translator-fluent` or `translator-lightweight`
perseus = { path = "../../../packages/perseus", features = [ "translator-fluent", "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
fluent-bundle = "0.16"
urlencoding = "2.1"

[dev-dependencies]
fantoccini = "0.19"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
## **WARNING!** Before running this example outside the Perseus repo, replace the below line with
## the one commented out below it (changing the path dependency to the version you want to use)
perseus-axum = { package = "perseus-integration", path = "../../../packages/perseus-integration", default-features = false }
# perseus-axum = { path = "../../../packages/perseus-axum", features = [ "dflt-server" ] }

[target.'cfg(client)'.dependencies]
