[package]
name = "perseus-example-idb-freezing"
version = "0.3.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus", features = [ "hydrate", "idb-freezing" ] }
sycamore = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
fantoccini = "0.17"
tokio = { version = "<=1.20.1", features = ["macros", "rt", "rt-multi-thread"] }
