[package]
name = "perseus-example-js-interop"
version = "0.4.0-beta.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(engine)'.dev-dependencies]
fantoccini = "0.17"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
## **WARNING!** Before running this example outside the Perseus repo, replace the below line with
## the one commented out below it (changing the path dependency to the version you want to use)
perseus-axum = { package = "perseus-integration", path = "../../../packages/perseus-integration", default-features = false }
# perseus-axum = { path = "../../../packages/perseus-axum", features = [ "dflt-server" ] }

[target.'cfg(client)'.dependencies]
wasm-bindgen = "0.2"
