[package]
name = "perseus-example-plugins"
version = "0.4.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus" }
sycamore = "=0.8.0-beta.6"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
toml = "0.5"

[dev-dependencies]
fantoccini = "0.17"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
