[package]
name = "perseus-example-router-state"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus", features = [ "hydrate" ] }
sycamore = "=0.8.0-beta.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
