[package]
name = "perseus-example-set-headers"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
fantoccini = "0.17"
ureq = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
## **WARNING!** Before running this example outside the Perseus repo, replace the below line with
## the one commented out below it (changing the path dependency to the version you want to use)
perseus-warp = { package = "perseus-integration", path = "../../../packages/perseus-integration", default-features = false }
# perseus-warp = { path = "../../../packages/perseus-warp", features = [ "dflt-server" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
