[package]
name = "perseus-example-auth"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We can't use hydration here yet (it doesn't handle the rapid page changes from unauthenticated to authenticated well)
perseus = { path = "../../../packages/perseus", features = [] }
sycamore = "=0.8.0-beta.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# We need the `HtmlDocument` feature to be able to use cookies (which this example does)
web-sys = { version = "0.3", features = [ "Storage" ] }
