[package]
name = "perseus-example-auth"
version = "0.4.0-beta.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We can't use hydration here yet (it doesn't handle the rapid page changes from unauthenticated to authenticated well)
perseus = { path = "../../../packages/perseus", features = [] }
sycamore = "=0.8.0-beta.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-integration = { path = "../../../packages/perseus-integration", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
# We need the `HtmlDocument` feature to be able to use cookies (which this example does)
web-sys = { version = "0.3", features = [ "Storage" ] }

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = [ "cdylib", "rlib" ]

[[bin]]
name = "perseus-example-auth"
path = "src/lib.rs"
