[package]
name = "perseus-showcase-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.5.1", features = ["ssr"] }
sycamore-router = "0.5.1"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "ReadableStream", "Window"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typetag = "0.1"
error-chain = "0.12"
futures = "0.3"
console_error_panic_hook = "0.1.6"
urlencoding = "2.1"

# This section is needed for WASM Pack (which we use instead of Trunk for flexibility)
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ssg"
path = "src/bin/build.rs"
