[package]
name = "perseus-showcase-server-actix-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { path = "../../../packages/perseus" }
perseus-actix-web = { path = "../../../packages/perseus-actix-web" }
actix-web = "3.3"
actix-files = "0.5"
urlencoding = "2.1"
serde_json = "1"
sycamore = { version = "0.5.1", features = ["ssr"] }
perseus-showcase-app = { path = "../app" }
